adicionado repo ao index

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="col-12">
       <span class="navbar-brand mb-0 h1">${component-formatted-name}</span>
-      <a class="navbar-brand pull-right" href="https://github.com/gigioSouza/vanilla-component-gulp-sass-builder">
+      <a class="navbar-brand pull-right" href="https://gigiosouza.github.io/ng-advanced-drag-drop-filter/">
         <i class="fa fa-github"></i>
       </a>
     </div>
